--- a/synth/synth.fxml
+++ b/synth/synth.fxml
@@ -61,112 +61,113 @@
       <Slider fx:id="mixer" layoutX="154.0" layoutY="160.0" max="1.0" min="-1.0" />
       <Label layoutX="104.0" layoutY="159.0" text="Mixer" />
       <Label layoutX="34.0" layoutY="336.0" text="Sequencer" />
-      <ChoiceBox fx:id="baseNote" layoutX="122.0" layoutY="396.0" maxWidth="75.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="baseNoteLetter" layoutX="119.0" layoutY="396.0" maxWidth="60.0" prefWidth="150.0" />
       <HBox layoutX="123.0" layoutY="327.0" prefHeight="60.0" prefWidth="540.0">
          <children>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step1" />
+                  <TextField fx:id="step1" text="0" />
                   <Label text="1" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step2" />
+                  <TextField fx:id="step2" text="0" />
                   <Label text="2" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step3" />
+                  <TextField fx:id="step3" text="0" />
                   <Label text="3" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step4" />
+                  <TextField fx:id="step4" text="0" />
                   <Label text="4" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step5" />
+                  <TextField fx:id="step5" text="0" />
                   <Label text="5" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step6" />
+                  <TextField fx:id="step6" text="0" />
                   <Label text="6" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step7" />
+                  <TextField fx:id="step7" text="0" />
                   <Label text="7" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step8" />
+                  <TextField fx:id="step8" text="0" />
                   <Label text="8" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step9" />
+                  <TextField fx:id="step9" text="0" />
                   <Label text="9" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step10" />
+                  <TextField fx:id="step10" text="0" />
                   <Label text="10" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step11" />
+                  <TextField fx:id="step11" text="0" />
                   <Label text="11" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step12" />
+                  <TextField fx:id="step12" text="0" />
                   <Label text="12" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step13" />
+                  <TextField fx:id="step13" text="0" />
                   <Label text="13" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step14" />
+                  <TextField fx:id="step14" text="0" />
                   <Label text="14" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step15" />
+                  <TextField fx:id="step15" text="0" />
                   <Label text="15" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
                <children>
-                  <TextField fx:id="step16" />
+                  <TextField fx:id="step16" text="0" />
                   <Label text="16" />
                </children>
             </VBox>
          </children>
       </HBox>
       <Label layoutX="35.0" layoutY="401.0" text="Base Note" />
-      <Label layoutX="217.0" layoutY="401.0" text="BPM" />
-      <TextField fx:id="bpm" layoutX="257.0" layoutY="396.0" maxWidth="60.0" text="120" />
-      <Label layoutX="332.0" layoutY="401.0" text="Steps" />
-      <TextField fx:id="steps" layoutX="381.0" layoutY="396.0" maxWidth="60.0" text="16" />
-      <Button fx:id="playButton" layoutX="462.0" layoutY="396.0" mnemonicParsing="false" text="Play / Stop" />
+      <Label layoutX="254.0" layoutY="401.0" text="BPM" />
+      <TextField fx:id="bpm" layoutX="294.0" layoutY="396.0" maxWidth="60.0" text="120" />
+      <Label layoutX="365.0" layoutY="401.0" text="Steps" />
+      <TextField fx:id="steps" layoutX="411.0" layoutY="396.0" maxWidth="60.0" text="16" />
+      <Button fx:id="playButton" layoutX="482.0" layoutY="396.0" mnemonicParsing="false" text="Play / Stop" />
+      <ChoiceBox fx:id="baseNoteNumber" layoutX="179.0" layoutY="396.0" maxWidth="60.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
