--- a/synth/synth.fxml
+++ b/synth/synth.fxml
@@ -1,173 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="synth.Controller">
+<AnchorPane maxHeight="740" maxWidth="1200" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740" prefWidth="1200" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="synth.Controller">
    <children>
-      <Label layoutX="33.0" layoutY="30.0" text="OSC1" />
-      <Label layoutX="33.0" layoutY="183.0" text="OSC2" />
-      <Label layoutX="341.0" layoutY="26.0" text="VCF" />
-      <Label layoutX="510.0" layoutY="24.0" text="Filter Env" />
-      <Label layoutX="330.0" layoutY="211.0" text="Amp Env" />
-      <VBox layoutX="33.0" layoutY="60.0" spacing="5.0">
-         <children>
-            <RadioButton fx:id="osc1Sawtooth" mnemonicParsing="false" text="Sawtooth" />
-            <RadioButton fx:id="osc1Square" mnemonicParsing="false" text="Square" />
-            <RadioButton fx:id="osc1Sine" mnemonicParsing="false" text="Sine" />
-         </children>
-      </VBox>
-      <VBox layoutX="33.0" layoutY="210.0" spacing="5.0">
-         <children>
-            <RadioButton fx:id="osc2Sawtooth" mnemonicParsing="false" text="Sawtooth" />
-            <RadioButton fx:id="osc2Square" mnemonicParsing="false" text="Square" />
-            <RadioButton fx:id="osc2Sine" mnemonicParsing="false" text="Sine" />
-         </children>
-      </VBox>
-      <ChoiceBox fx:id="osc1Octave" layoutX="149.0" layoutY="60.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="osc1Chord" layoutX="149.0" layoutY="108.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="osc2Octave" layoutX="149.0" layoutY="199.0" prefWidth="150.0" />
-      <Slider fx:id="osc2Detune" layoutX="144.0" layoutY="274.0" max="1.0" min="-1.0" minWidth="160.0" />
-      <Label layoutX="149.0" layoutY="247.0" text="Detune" />
-      <Slider fx:id="cutoff" layoutX="341.0" layoutY="84.0" max="12000.0" />
-      <Slider fx:id="resonance" layoutX="341.0" layoutY="133.0" max="1.0" />
-      <Slider fx:id="filterEnvelope" layoutX="341.0" layoutY="184.0" max="1.0" min="-1.0" />
-      <Label layoutX="341.0" layoutY="56.0" text="Cutoff" />
-      <Label layoutX="341.0" layoutY="109.0" text="Resonance" />
-      <Label layoutX="338.0" layoutY="158.0" text="Env amount" />
-      <Slider fx:id="attack" layoutX="354.0" layoutY="244.0" max="500.0" min="10.0" />
-      <Slider fx:id="decay" layoutX="354.0" layoutY="278.0" max="500.0" />
-      <Slider fx:id="filterAttack" layoutX="510.0" layoutY="70.0" max="500.0" min="10.0" orientation="VERTICAL" />
-      <Slider fx:id="filterDecay" layoutX="541.0" layoutY="70.0" max="500.0" min="10.0" orientation="VERTICAL" />
-      <Slider fx:id="filterSustain" layoutX="571.0" layoutY="70.0" max="1.0" orientation="VERTICAL" />
-      <Slider fx:id="filterRelease" layoutX="603.0" layoutY="70.0" max="500.0" orientation="VERTICAL" />
-      <Label layoutX="514.0" layoutY="54.0" text="A" />
-      <Label layoutX="545.0" layoutY="54.0" text="D" />
-      <Label layoutX="576.0" layoutY="54.0" prefHeight="21.0" prefWidth="0.0" text="S" />
-      <Label layoutX="608.0" layoutY="54.0" text="R" />
-      <Label layoutX="333.0" layoutY="242.0" text="A" />
-      <Label layoutX="333.0" layoutY="277.0" text="D" />
-      <Label layoutX="499.0" layoutY="242.0" text="S" />
-      <Label layoutX="499.0" layoutY="278.0" text="R" />
-      <Slider fx:id="sustain" layoutX="521.0" layoutY="244.0" max="1.0" />
-      <Slider fx:id="release" layoutX="520.0" layoutY="279.0" max="500.0" />
-      <Slider fx:id="mixer" layoutX="154.0" layoutY="160.0" max="1.0" min="-1.0" />
-      <Label layoutX="104.0" layoutY="159.0" text="Mixer" />
-      <Label layoutX="34.0" layoutY="336.0" text="Sequencer" />
-      <ChoiceBox fx:id="baseNoteLetter" layoutX="119.0" layoutY="396.0" maxWidth="60.0" prefWidth="150.0" />
-      <HBox layoutX="123.0" layoutY="327.0" prefHeight="60.0" prefWidth="540.0">
-         <children>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step1" text="0" />
-                  <Label text="1" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step2" text="0" />
-                  <Label text="2" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step3" text="0" />
-                  <Label text="3" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step4" text="0" />
-                  <Label text="4" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step5" text="0" />
-                  <Label text="5" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step6" text="0" />
-                  <Label text="6" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step7" text="0" />
-                  <Label text="7" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step8" text="0" />
-                  <Label text="8" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step9" text="0" />
-                  <Label text="9" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step10" text="0" />
-                  <Label text="10" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step11" text="0" />
-                  <Label text="11" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step12" text="0" />
-                  <Label text="12" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step13" text="0" />
-                  <Label text="13" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step14" text="0" />
-                  <Label text="14" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step15" text="0" />
-                  <Label text="15" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="60.0" prefWidth="33.0" spacing="5.0">
-               <children>
-                  <TextField fx:id="step16" text="0" />
-                  <Label text="16" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-      <Label layoutX="35.0" layoutY="401.0" text="Base Note" />
-      <Label layoutX="254.0" layoutY="401.0" text="BPM" />
-      <TextField fx:id="bpm" layoutX="294.0" layoutY="396.0" maxWidth="60.0" text="120" />
-      <Label layoutX="365.0" layoutY="401.0" text="Steps" />
-      <TextField fx:id="steps" layoutX="411.0" layoutY="396.0" maxWidth="60.0" text="16" />
-      <Button fx:id="playButton" layoutX="482.0" layoutY="396.0" mnemonicParsing="false" text="Play / Stop" />
-      <ChoiceBox fx:id="baseNoteNumber" layoutX="179.0" layoutY="396.0" maxWidth="60.0" prefWidth="150.0" />
+      <ImageView fx:id="back" fitHeight="740" fitWidth="1200" layoutX="0" pickOnBounds="true" preserveRatio="true" smooth="true" x="0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@synth_1200.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc1Wave" fitHeight="62.0" fitWidth="62.0" layoutX="29.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc1Octave" fitHeight="62.0" fitWidth="62.0" layoutX="127.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc1Chord" fitHeight="62.0" fitWidth="62.0" layoutX="221.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="mix" fitHeight="62.0" fitWidth="62.0" layoutX="325.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="cutoff" fitHeight="62.0" fitWidth="62.0" layoutX="422.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="filterLfo" fitHeight="62.0" fitWidth="62.0" layoutX="516.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="attack" fitHeight="62.0" fitWidth="62.0" layoutX="612.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc2Wave" fitHeight="62.0" fitWidth="62.0" layoutX="25.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc2Octave" fitHeight="62.0" fitWidth="62.0" layoutX="125.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc2Detune" fitHeight="62.0" fitWidth="62.0" layoutX="225.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="osc2Lfo" fitHeight="62.0" fitWidth="62.0" layoutX="321.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="resonance" fitHeight="62.0" fitWidth="62.0" layoutX="421.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="filterEnv" fitHeight="62.0" fitWidth="62.0" layoutX="519.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="filterAttack" fitHeight="62.0" fitWidth="62.0" layoutX="616.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="decay" fitHeight="62.0" fitWidth="62.0" layoutX="710.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="filterDecay" fitHeight="62.0" fitWidth="62.0" layoutX="712.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lfo1Rate" fitHeight="62.0" fitWidth="62.0" layoutX="806.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lfo2Rate" fitHeight="62.0" fitWidth="62.0" layoutX="809.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lfo1Depth" fitHeight="62.0" fitWidth="62.0" layoutX="901.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="lfo2Depth" fitHeight="62.0" fitWidth="62.0" layoutX="907.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@knob.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
